Add custom form validation

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <div class="container">
           <div class="input-group">
             <label for="title">Title</label>
-            <input type="text" class="input" id="title">
+            <input type="text" class="input" id="title" required>
           </div>
           <div class="input-group">
             <label for="author">Author</label>
-            <input type="text" class="input" id="author">
+            <input type="text" class="input" id="author" required>
           </div>
           <div class="input-group">
             <label for="pages">Number of Pages</label>
-            <input type="number" class="input" id="pages">
+            <input type="number" class="input" id="pages" required>
           </div>
           <div class="input-group">
             <label for="read">Did you read the book?</label>
-            <select class="input" id="read">
+            <select class="input" id="read" required>
               <option value="Not read">Not read</option>
               <option value="Read">Read</option>
             </select>
